bk_ida/gobmkida/g3/owl_find_lunches
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_find_lunches/src/engine/owl.c:4652:12: error: expected expression
*( _OWORD *)( v3 - 192) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_find_lunches/src/engine/owl.c:4652:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v3 - 192) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_find_lunches/src/engine/owl.c:4660:12: error: expected expression
*( _OWORD *)( v3 - 208) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_find_lunches/src/engine/owl.c:4660:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v3 - 208) = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_find_lunches/src/obj/1/owl.o] Error 1
